# muse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build.yml  ci.yml  integration.yml
alembic/: env.py
alembic/versions/: 891e5c6b2082_add_opportunities_table.py  a3f7b2c1d4e5_add_ideas_table_and_confidence.py  c64cd9efa446_create_signals_and_state_tables.py
config/: focus.yaml
docs/plans/: 2026-03-16-phase1-mvp.md  2026-03-17-phase2-weekly-insights.md
docs/specs/: 2026-03-16-muse-design.md
docs/superpowers/plans/: 2026-03-17-phase3-monthly-ideas.md
docs/superpowers/specs/: 2026-03-17-phase3-monthly-ideas-design.md
scripts/: muse_feeds.opml  validate_and_export_feeds.py
src/muse/: config.py  db.py  logging.py  main.py  scheduler.py
src/muse/analyzer/: ai_client.py  idea.py  opportunity.py  signal.py
src/muse/analyzer/prompts/: idea_generation_system.txt  idea_generation_user.txt  opportunity_extraction_system.txt  opportunity_extraction_user.txt  signal_detection_system.txt  signal_detection_user.txt
src/muse/collector/: filter.py  miniflux.py
src/muse/publisher/: email.py  notion.py  telegram.py
templates/: monthly_ideas.html  weekly_digest.html
tests/: conftest.py  test_ai_client.py  test_collector.py  test_config.py  test_email.py  test_filter.py  test_idea_generator.py  test_integration.py  test_notion.py  test_opportunity.py  test_scheduler_ideas.py  test_scheduler_opportunities.py  test_signal.py  test_telegram.py
