[project]
name = "muse"
version = "0.1.0"
description = ""
authors = [
    {name = "Airing",email = "airing@ursb.me"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-telegram-bot (>=22.7,<23.0)",
    "apscheduler (>=3.11.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "respx (>=0.22.0,<0.23.0)",
    "testcontainers[postgres] (>=4.14.1,<5.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.poetry]
packages = [{include = "muse", from = "src"}]
